# DataEngEnv

./: .gitignore  Dockerfile  GRPO_Training_Pipeline.ipynb  GRPO_Training_Real.ipynb  README.md  blog.md  gradio_app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  upload_to_hf.py
app/: environment.py  main.py  models.py  reward.py
app/actors/: __init__.py  code_reviewer.py  mlops_bot.py
app/graders/: grader1.py  grader2.py  grader3.py  grader_stage1.py  grader_stage2.py  grader_stage3.py  grader_stage4.py
app/tasks/: stage1_data_repair.py  stage2_training_monitor.py  stage3_eval_validation.py  stage4_deploy_gate.py  task1_easy.py  task2_medium.py  task3_hard.py
baseline/: results.json  run_baseline.py
server/: app.py
