[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataengenv"
version = "1.0.0"
description = "ML Data Pipeline Debugger - OpenEnv Environment"
requires-python = ">=3.10, <3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn",
    "pydantic>=2.7.1",
    "pandas",
    "scikit-learn",
    "numpy",
    "openai",
    "pyyaml",
    "httpx",
    "groq",
    "openenv-core>=0.2.0",
    "gradio>=5.9.1",
    "requests"
]

[project.scripts]
server = "app.main:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/CoBeDigger/DataEngEnv"

[tool.setuptools]
packages = ["app"]
